fix: edited delivery required fields
